reviews overflow fixed

--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -1,29 +1,26 @@
-.reviews-container{
-    /*display: flex;*/
-    flex-direction: column;
-    align-items: center;
-
+.reviews-container {
+  /*display: flex;*/
+  flex-direction: column;
+  align-items: center;
 }
 
-.review-header{
-    display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-    padding-bottom: 10px;
-
+.review-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 10px;
 }
-.review-item{
-
-    flex-direction: inherit;
-    align-items: center;
-    justify-content: center;
-    max-width: 550px;
-    background-color: hsl(var(--clr-brown), .3);
-    border: 3px solid hsl(var(--clr-brown));
-
-    margin-top: 25px;
+.review-item {
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 400px;
+  background-color: hsl(var(--clr-brown), 0.3);
+  border: 3px solid hsl(var(--clr-brown));
+  overflow-y: auto;
+  margin-top: 25px;
 }
-.review-text{
-    font-size: clamp(var(--fs-100), 2vh, var(--fs-300));
+.review-text {
+  font-size: clamp(var(--fs-100), 2vh, var(--fs-300));
 }
-
